# IMU-Kinetic

./: .gitignore  CMakeLists.txt  MotionPerfect.ioc  README.md  STM32L475VGTx_FLASH.ld  STM32Toolchain.cmake  stm32l4xx.gcc.cmake
Core/Inc/: FreeRTOSConfig.h  FreeRTOSTasksConfig.h  LoggerConfig.h  Main.h  RTE_Components.h  error_handler.h  gpio.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  usart.h
Core/Inc/Algorithms/AHRS/: 6dof.h  6dof_math.h  angle_table.h
Core/Inc/Peripherals/: GPIO.h  USART.h
Core/Inc/Tasks/: Logging.h  Measurement.h  accelerometer.h
Core/Inc/Utils/: ErrorHandler.h  Logger.h
Core/Src/: FreeRTOS.c  IO.c  Main.c  error_handler.c  freertos.c  gpio.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_hal_timebase_tim.c  stm32l4xx_it.c  syscalls.c  system_stm32l4xx.c  usart.c
Core/Src/Algorithms/AHRS/: 6dof_math.c  angle_table.c  movement_analysis.c
Core/Src/Peripherals/: GPIO.c  RCC.c  USART.c
Core/Src/Tasks/: Logging.c  Measurement.c  accelerometer.c
Core/Src/Utils/: ErrorHandler.c  Logger.c
Drivers/BSP/Inc/: stm32l475e_iot01.h  stm32l475e_iot01_accelero.h  stm32l475e_iot01_gyro.h
Drivers/BSP/Inc/Components/: lsm6dsl.h
Drivers/BSP/Inc/Components/Common/: accelero.h  gyro.h
Drivers/BSP/Src/: stm32l475e_iot01.c  stm32l475e_iot01_accelero.c  stm32l475e_iot01_gyro.c
Drivers/BSP/Src/Components/: lsm6dsl.c
Drivers/CMSIS/Include/: cmsis_armcc.h  cmsis_armclang.h  cmsis_compiler.h  cmsis_gcc.h  cmsis_iccarm.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm4.h  core_cm7.h  core_sc000.h  core_sc300.h  mpu_armv7.h  mpu_armv8.h
Drivers/CMSIS_5/: README.md
Drivers/CMSIS_5/CMSIS/Core/Include/: cmsis_armcc.h  cmsis_armclang.h  cmsis_armclang_ltm.h  cmsis_compiler.h  cmsis_gcc.h  cmsis_iccarm.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm4.h  core_cm7.h  core_sc000.h  core_sc300.h  mpu_armv7.h  mpu_armv8.h  tz_context.h
Drivers/CMSIS_5/CMSIS/RTOS2/FreeRTOS/Include/: freertos_evr.h  freertos_mpool.h  freertos_os2.h
Drivers/CMSIS_5/CMSIS/RTOS2/FreeRTOS/Source/: cmsis_os1.c  cmsis_os2.c  freertos_evr.c  handlers.c  os_systick.c
Drivers/CMSIS_5/CMSIS/RTOS2/Include/: cmsis_os.h  cmsis_os2.h  os_tick.h
Drivers/CMSIS_5/Device/ST/STM32L4xx/Include/: stm32l475xx.h  stm32l4xx.h  system_stm32l4xx.h
Drivers/CMSIS_5/Device/ST/STM32L4xx/Source/GCC/: STM32L475VGTx_FLASH.ld  startup_stm32l475xx.c
Drivers/STM32L4xx_HAL_Driver/Inc/: stm32l4xx_hal.h  stm32l4xx_hal_cortex.h  stm32l4xx_hal_def.h  stm32l4xx_hal_dma.h  stm32l4xx_hal_dma_ex.h  stm32l4xx_hal_exti.h  stm32l4xx_hal_flash.h  stm32l4xx_hal_flash_ex.h  stm32l4xx_hal_flash_ramfunc.h  stm32l4xx_hal_gpio.h  stm32l4xx_hal_gpio_ex.h  stm32l4xx_hal_i2c.h  stm32l4xx_hal_i2c_ex.h  stm32l4xx_hal_pwr.h  stm32l4xx_hal_pwr_ex.h  stm32l4xx_hal_rcc.h  stm32l4xx_hal_rcc_ex.h  stm32l4xx_hal_tim.h  stm32l4xx_hal_tim_ex.h  stm32l4xx_hal_uart.h  stm32l4xx_hal_uart_ex.h
Drivers/STM32L4xx_HAL_Driver/Inc/Legacy/: stm32_hal_legacy.h
Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal.c  stm32l4xx_hal_cortex.c  stm32l4xx_hal_dma.c  stm32l4xx_hal_dma_ex.c  stm32l4xx_hal_exti.c  stm32l4xx_hal_flash.c  stm32l4xx_hal_flash_ex.c  stm32l4xx_hal_flash_ramfunc.c  stm32l4xx_hal_gpio.c  stm32l4xx_hal_i2c.c  stm32l4xx_hal_i2c_ex.c  stm32l4xx_hal_pwr.c  stm32l4xx_hal_pwr_ex.c  stm32l4xx_hal_rcc.c  stm32l4xx_hal_rcc_ex.c  stm32l4xx_hal_tim.c  stm32l4xx_hal_tim_ex.c  stm32l4xx_hal_uart.c  stm32l4xx_hal_uart_ex.c
